# westin-bot

./: .gitignore  LICENSE  README.md  ingestion.py  main.py  pyproject.toml
westin_bot/: query.py  regulamento_interno_embeddings.py
