[project]
name = "westin-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bruno Lucattelli", email = "lucattelli@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "openai>=1.84.0",
    "pymupdf>=1.26.0",
    "sqlite-vec>=0.1.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pylint>=3.3.7",
    "pytest>=8.4.0",
    "sqlite-utils>=3.38",
]

[project.scripts]
westin-bot = "westin_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
